AlphabetaAlgorithmus ueberarbeitet