@@ -5,46 +5,40 @@ import java.util.LinkedList;
 public class AlphaBetaObjekt {
 
 	private AlphaBetaObjekt oVorgaenger;
-	private int iSuchtiefe;
 	private LinkedList<Integer> lListSpielZugListe;
-	private int iPointer;
+	private LinkedList<Integer> lListLog;
 	private float fAlpha;
 	private float fBeta;
+	private int iGeschwister;
+	
+
 	private Spieldaten oSpdaten;
 
 
-	public AlphaBetaObjekt(int suchtiefe, LinkedList<Integer> log){
+	public AlphaBetaObjekt(AlphaBetaObjekt vorgaenger, LinkedList<Integer> log, int geschwister){
+		lListLog = new LinkedList<Integer>(log);
 		oSpdaten = Spieldaten.getInstance();
-		this.iSuchtiefe = suchtiefe + 1;
-		iPointer = 0;
+		oVorgaenger = vorgaenger;
+		iGeschwister = geschwister;
 		fAlpha = 0;
 		fBeta = 0;
-		
-		int letzterZug = log.get(log.size()-1);
-		lListSpielZugListe = new LinkedList<Integer>(oSpdaten.zRaumListe(letzterZug-1));
+
+		int letzterZug = lListLog.getLast();
+		lListSpielZugListe = new LinkedList<Integer>(oSpdaten.getZRaumListe(letzterZug-1));
 		if(lListSpielZugListe.getFirst()==1){
 			lListSpielZugListe.removeFirst();
 		}
 	}
 
 
-	public float auswerten(){
+	public boolean auswerten(){
 		if(lListSpielZugListe.size()==0){
-			return 1;
-		}else{
-			return 0;	
+			return true;
 		}
+		return false;	
 	}
 
 
-	public int getPointer() {
-		return iPointer;
-	}
-
-
-	public void setPointer(int pointer) {
-		this.iPointer = pointer;
-	}
 
 
 	public float getAlpha() {
@@ -67,12 +61,23 @@ public class AlphaBetaObjekt {
 	}
 
 
-	public int getSuchtiefe() {
-		return iSuchtiefe;
+	public AlphaBetaObjekt getoVorgaenger() {
+		return oVorgaenger;
 	}
 
-	public void setSuchtiefe(int suchtiefe) {
-		this.iSuchtiefe = suchtiefe;
+	public int getlListLogGroesse(){
+		return lListLog.size();
+	}
+	
+	public int getlListSpielZugListgroesse(){
+		return lListSpielZugListe.size();
+	}
+	
+	public int getlListSpielZugZahl(int index){
+		return lListSpielZugListe.get(index);
 	}
 
+	public int getiGeschwister() {
+		return iGeschwister;
+	}
 }
